@@ -387,7 +387,7 @@ class IndividualControllerRoot extends BaseController {
 					//LBox --------  addition for Lightbox Album --------------------------------------------
 					$name = $this->indi->getName();
 					if (file_exists("modules/lightbox/album.php")) {
-						print "<a href=\"" . $firstmediarec["file"] . "\" rel=\"clearbox[general_1]\" title=\"" . $mid . ":" . $GEDCOM . ":" . PrintReady(htmlspecialchars($name)) . "\">" . "\n";
+						print "<a href=\"" . $firstmediarec["file"] . "\" rel=\"clearbox[general_1]\" rev=\"" . $mid . ":" . $GEDCOM . ":" . PrintReady(htmlspecialchars($name)) . "\">" . "\n";
 					}else
 					//Lbox -----------------------------------------------------------------------------------------
 					
