@@ -41,6 +41,7 @@
     global $SEARCH_SPIDER;
     global $t, $n, $item, $items, $p, $edit, $SERVER_URL, $reorder, $LB_AL_THUMB_LINKS, $note, $rowm;
 	global $LB_URL_WIDTH, $LB_URL_HEIGHT;
+	
 
 	// If reorder media has been clicked
 	if (isset($reorder) && $reorder==1) {
@@ -161,11 +162,10 @@
 					}else if (eregi("1 SOUR",$rowm['m_gedrec'])) {
 
 //						print	"<a href=\"" . $mainMedia . "\" rel='clearbox[general]' title=\"" . stripslashes($mediaTitle) . "\"\" 
-						print	"<a href=\"" . $mainMedia . "\" rel='clearbox[general]' title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\" 						
+						print	"<a href=\"" . $mainMedia . "\" rel='clearbox[general]' rev=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . Printready(strip_tags($mediaTitle)) . "\"\" 
 								onmouseover=\"Tip('" 
 									. "&nbsp;" . $mediaTitle . ""
 									. "<br />"
-									
 									. "&nbsp;" . $pgv_lang["lb_view_source_tip"] . "<a href=\'" 
 									. $SERVER_URL . "source.php?sid=" . $sour . "\'><b><font color=#0000FF>&nbsp;" . $sourdesc . "&nbsp;" . $sour2  
 									. "</font></b><\/a>" 
@@ -176,20 +176,23 @@
 									. "TEXTALIGN, '" . $alignm . "', OFFSETY, -65, OFFSETX, 5, CLICKCLOSE, true, DURATION, 4000, STICKY, true, PADDING, 5, BGCOLOR, '#f3f3f3', FONTSIZE, '8pt'" 
 								. ")\""
 								. ">\n";
-		
+
 					
 					// If no source info available - Open with Lightbox normal, and create tooltip link for media details only
 					}else if (!eregi("1 SOUR",$rowm['m_gedrec'])) { 
-						print 	"<a href=\"" . $mainMedia . "\" rel='clearbox[general]' title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\"
-								onmouseover=\"Tip('" 
-									. "&nbsp;" . $mediaTitle . ""
-									. "<br />"
-									. "&nbsp;" . $pgv_lang["lb_view_details_tip"] . "<a href=\'"
+						// print	"<a href=\"" . $mainMedia . "\" rel='clearbox[general]' title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\">";
+
+						print 	"<a href=\"" . $mainMedia . "\" rel='clearbox[general]' rev=\"" . $rowm['m_media'] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\"";
+
+						print 	"	onmouseover=\"Tip('&nbsp;" . $mediaTitle . "<br />"
+									. "&nbsp;" . $pgv_lang['lb_view_details_tip']
+									. "<a href=\'"
 									. $SERVER_URL . "mediaviewer.php?mid=" . $rowm["m_media"] . "\'><b><font color=#0000FF>&nbsp;" . $rowm["m_media"]
-									. "</font></b><\/a>',"
-									. "TEXTALIGN, '" . $alignm . "', OFFSETY, -45, OFFSETX, 5, CLICKCLOSE, true, DURATION, 4000, STICKY, true, PADDING, 5, BGCOLOR, '#f3f3f3', FONTSIZE, '8pt'" 
-								. ")\"" 
-								. ">\n";
+									. "</font></b></a>',"
+									. "TEXTALIGN, '" . $alignm . "', OFFSETY, -45, OFFSETX, -5, CLICKCLOSE, true, DURATION, 4000, STICKY, true, PADDING, 5, BGCOLOR, '#f3f3f3', FONTSIZE, '8pt' "
+									. ")" ;
+
+						print	"\">\n";
 
 					}else{
 						// Do nothing
@@ -233,7 +236,7 @@
 						
 					// Else if source info available and file = PDF  - Open with Lightbox URL,  and create tooltip link for source AND media details
 					}else if (eregi("1 SOUR",$rowm['m_gedrec']) && (eregi("\.pdf",$rowm['m_file']) || eregi("http",$rowm['m_file']) ) ) {  
-						print 	"<a href=\"" . $mainMedia . "\" rel='clearbox(" . $LB_URL_WIDTH . "," . $LB_URL_HEIGHT . ",click)' title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\"
+						print 	"<a href=\"" . $mainMedia . "\" rel='clearbox(" . $LB_URL_WIDTH . "," . $LB_URL_HEIGHT . ",click)' rev=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\"
 								onmouseover=\"Tip('" 
 									. "&nbsp;" . $mediaTitle . ""
 									. "<br />" 								
@@ -250,7 +253,7 @@
 								
 					// Else if no source info available and file = PDF or URL - Open with Lightbox URL,  and create tooltip link for media details only
 					}else if (!eregi("1 SOUR",$rowm['m_gedrec']) && (eregi("\.pdf",$rowm['m_file']) || eregi("http",$rowm['m_file'])) ) { 
-						print 	"<a href=\"" . $mainMedia . "\" rel='clearbox(" . $LB_URL_WIDTH . "," . $LB_URL_HEIGHT . ",click)' title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\" 
+						print 	"<a href=\"" . $mainMedia . "\" rel='clearbox(" . $LB_URL_WIDTH . "," . $LB_URL_HEIGHT . ",click)' rev=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\" 
 								onmouseover=\"Tip('" 
 									. "&nbsp;" . $mediaTitle . ""
 									. "<br />"
@@ -304,8 +307,8 @@
 					// Else if source info available and file is not supported by Lightbox - Open with Pop-up, and create tooltip link for source AND media details
 					}else if (eregi("1 SOUR",$rowm['m_gedrec'])) { 
 						print 	"<a href=\"javascript:;\" 
-								onclick=\"return openImage('".rawurlencode($mainMedia)."',$imgwidth, $imgheight);\" title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\" 
-								onmouseover=\"Tip('" 
+								onclick=\"return openImage('".rawurlencode($mainMedia)."',$imgwidth, $imgheight);\" rev=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\" 
+								onmouseover= \"Tip('" 
 									. "&nbsp;" . $mediaTitle . ""
 									. "<br />" 								
 									. "&nbsp;" . $pgv_lang["lb_view_source_tip"] . "<a href=\'" 
@@ -322,7 +325,7 @@
 					// Else if no source info available and file is not supported by Lightbox - Open with Pop-up, and create tooltip link for media details only
 					}else if (!eregi("1 SOUR",$rowm['m_gedrec'])) { 
 						print 	"<a href=\"javascript:;\" 
-								onclick=\"return openImage('".rawurlencode($mainMedia)."',$imgwidth, $imgheight);\" title=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\"
+								onclick=\"return openImage('".rawurlencode($mainMedia)."',$imgwidth, $imgheight);\" rev=\"" . $rowm["m_media"] . ":" . $GEDCOM . ":" . $mediaTitle . "\"\"
 								onmouseover=\"Tip('" 
 									. "&nbsp;" . $mediaTitle . ""
 									. "<br />"
@@ -360,19 +363,13 @@
 				$size = findImageSize($thumbnail);
 				if ($size[1]<$height) $height = $size[1];
 				print "<img src=\"" . $thumbnail . "\" height=\"".$height."\" border=\"0\" " ;
+			}
 
-			}
-			// These next lines disable the extra IE Browser tooltip. (It has to be done manually in Firefox but this is not recommended)
-				// How to turn off tooltip in firefox: (Not recommended)
-					// Type "about:config" in the Firefox address box and hit enter. 
-					// It shows a list of configurable features. Find "browser.chrome.toolbar_tips" item and double-click to turn it value to false.
-				// If you perform the above, ALL Firefox chrome tooltips will be turned off .. This is not recommended)
-				// I will try to find a better way of removing the doubled tooltips ... Brian Holland .. Lightbox developer)
-			if ( eregi("1 SOUR",$rowm['m_gedrec'])) {
-				print " alt=\"" . $mediaTitle . "\" title=\"" . $mediaTitle . "\nSource info is available\" />";
-			}else{
-				print " alt=\"" . $mediaTitle . "\" title=\"" . $mediaTitle . "\" />";
-			}
+			// This next line disables the extra IE Browser tooltip. (For the moment it will NOT disable the browser tooltip in Firefox)
+			// I will try to find a better way of removing the extra browser tooltip in FF ... Brian Holland .. Lightbox developer)
+			//
+			// The above is now done with the "rev" element contact Brian Holland for details
+			// print " alt=\"" . " " . "\" title=\"" . "" . "\"  />";
 			
 			// Close anchor
 			if ($mainFileExists) print "</a>" . "\n";
